# CDDA-recipe-viewer

./: .gitignore  innawood-techtree-design.md  pyproject.toml
.github/workflows/: nightly.yml
builder/: __init__.py  __main__.py  bottlenecks.py  categories.py  emit.py  era_gates.json  eras.py  fetch.py  graph.py  load.py  mods.py  resolve.py
builder/schema/: construction.schema.json  item.schema.json  recipe.schema.json  requirement.schema.json
site/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
site/public/: graph-innawood.json  graph-manifest.json  graph.json
site/src/: App.tsx  modColors.ts  types.ts  vite-env.d.ts
site/src/components/: BottleneckView.tsx  CategoryGrid.tsx  CategorySidebar.tsx  DependencyTree.tsx  EraGrid.tsx  EraSidebar.tsx  GraphView.tsx  Header.tsx  NodeDetail.tsx  SearchBar.tsx
site/src/hooks/: useGraph.ts
site/src/lib/: graphIndex.ts  treeTraversal.ts
tests/: test_bottlenecks.py  test_emit.py  test_eras.py  test_fetch_load.py  test_graph.py  test_resolve.py
