[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdda-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that perform network I/O and disk cloning (deselect with -m 'not integration')",
]
